--- a/static-web/clearfix/style.css
+++ b/static-web/clearfix/style.css
@@ -65,7 +65,7 @@ header, footer, .main, .sidemenu {
 }
 
 /*
-clearfixとは
+clearfixとは:
 floatプロパティを使って水平方向に要素を配置した場合、そのままでは配置した要素の高さ情報が無視されるため、
 以降の要素の垂直方向の配置がうまくいかない。
 それを防ぐために、float要素の兄弟にclearプロパティを指定した要素を配置する手法。
